argocd/authentik-app/000-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  namespace: authentik
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - authentik.bacherik.de
    secretName: authentik-tls
  rules:
  - host: "authentik.bacherik.de"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik-server
            port:
              number: 80
